tests/parser/error/definition_not_eq_def_with_ty_restr.st
def a : N = 32
